# proofsynth

./: .gitignore  checkpoint2.pt  generate.py  pyproject.toml  requirements.txt  train.py
heuristic/: heuristic.py  naive.py  rnn.py  rnn_generate.py  rnn_model.py  transformer.py  transformer_finetune.py
prop/: canonicalize.py  grammar.lark  lang.py  prop_parser.py  tactics.py
synth/: end_tactics.py  heuristic.py  init_tactics.py  proofstate.py  synthesis.py
tests/: test_init_tactics.py  test_prop_parser.py  test_synthesis.py  test_tactics.py
